force-app/main/default/objects/RetailStore__c/RetailStore__c.object-meta.xml
<CustomObject>
    <description>Retail Store</description>
    <label>RetailStore</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RetailStores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>