force-app/main/default/objects/RetailStore__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RetailStores</relationshipLabel>
    <relationshipName>RetailStores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>