force-app/main/default/objects/RetailStore__c/fields/EmployeeCount__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCount__c</fullName>
    <description>Employee Count</description>
    <label>Employee Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>