force-app/main/default/objects/RetailStore__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <description>Store Code</description>
    <label>Store Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>