force-app/main/default/objects/RetailStore__c/fields/StoreType__c.field-meta.xml
<CustomField>
    <fullName>StoreType__c</fullName>
    <description>StoreType</description>
    <label>Store Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>