force-app/main/default/objects/RetailStore__c/fields/StoreTypeId__c.field-meta.xml
<CustomField>
    <fullName>StoreTypeId__c</fullName>
    <description>StoreTypeId</description>
    <label>StoreTypeId</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>