force-app/main/default/objects/RetailStore__c/fields/SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SyncStatus__c</fullName>
    <description>Sync Status</description>
    <label>Sync Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>